
1.6.4
Added Compote - DONE!!!
Wildcraft gelatin recipes fixed - DONE!!!
Added Acorn "Coffee" & Roasted Acorns - DONE!!!
Handbook mentions you can get resin from acacia trees - DONE!!!
You can no longer crack boiled/pickled eggs - DONE!!!
Charred syrup-covered fruit bread recipe fixed - DONE!!!
Japanese translation updated (thanks to macoto_hino) - DONE!!!
Log spam reduced
Wildcraft berries fixed in oven
Candied fruit added
Lard transition timer reduced from 1440 hours to 240 - DONE!!!
Peanuts now visible in meals - DONE!!!

1.6.3
Added Breaded Mushrooms
Added Soulstorm Brew
Braziers/Superfuels recipes updated
PS meatnuggets have proper perish rates; charred meatnugget perish rate nerfed
Hard lard drops fixed
Breadcrumbs can be made in the grid, too (recipe was incomplete)
Aged meat looks right on meat hooks
Handbook mentions scrambled egg recipe change 
Cooking 104 tweaked for clarity
Boiled food added to handbook guide (whoops)
Salt in the handbook actually says it needs 10 L instead of 1 L
Patches are ALL server-side

1.6.2
Ancient Tools Compatibility added (bread/breadcrumbs and meat can be used in stuff)
Lard dries into Hardened Lard; replaces liquid lard in grid recipes
Meat/sausage & veggies can be boiled in the saucepan
Dehydrated Wildcraft berries can be used in meat stews
Chopped food nutrition nerfed to match unchopped variants
Dried meat lost nutrition bonus, gained healing
Log errors quashed
Japanese translation updated (thanks to macoto_hino)
English translation actually refined (thanks to Ledyanaya Sonya)
Meat hook transform reviewed
Elderberry cider can be used in meat stews
Egg nutrition fixed
Various broth recipes fixed
Oven transforms reviewed
Handbook links fixed
Vinegar & many EF foods enabled in the handbook (watch out for crashes when clicking on part-baked items)

1.6.1
Liquid eggs can be used in scrambled egg recipe
Breadedball & Acornbreadedball kneading recipe fixed
Text fixed
Fish broth can actually be made