@@ -166,7 +166,7 @@
 			freshHours: { avg: 0 },
 			transitionHours: { avg: 72 },
 			transitionedStack: { type: "item", code: "expandedfoods:dryfruit-cranberry" },
-			transitionRatio: 0.25
+			transitionRatio: 1
 		},
         ],
 		"@*-(orange|mango|lychee|pomegranate)": [{
@@ -180,7 +180,7 @@
 			freshHours: { avg: 0 },
 			transitionHours: { avg: 240 },
 			transitionedStack: { type: "item", code: "expandedfoods:dryfruit-{fruit}" },
-			transitionRatio: 0.25
+			transitionRatio: 1
 		},
         ],
         "@*-(pinkapple|redapple|yellowapple|pear|breadfruit)": [{
