@@ -63,7 +63,7 @@
           "type": "item",
           "code": "expandedfoods:wilddryfruit-{type}"
         },
-        "transitionRatio": 0.25
+        "transitionRatio": 1
       },
     ],
     "*-cloudberry": [
@@ -85,7 +85,7 @@
           "type": "item",
           "code": "expandedfoods:wilddryfruit-{type}"
         },
-        "transitionRatio": 0.25
+        "transitionRatio": 1
       },
     ],
     "@*-(strawberry|honeysuckle)": [
@@ -107,7 +107,7 @@
           "type": "item",
           "code": "expandedfoods:wilddryfruit-{type}"
         },
-        "transitionRatio": 0.25
+        "transitionRatio": 1
       },
     ],
     "*-elderberry": [
@@ -129,7 +129,7 @@
           "type": "item",
           "code": "expandedfoods:wilddryfruit-{type}"
         },
-        "transitionRatio": 0.25
+        "transitionRatio": 1
       },
     ],
     "*-huckleberry": [
@@ -151,7 +151,7 @@
           "type": "item",
           "code": "expandedfoods:wilddryfruit-{type}"
         },
-        "transitionRatio": 0.25
+        "transitionRatio": 1
       },
     ],
     "*-dogrose": [
@@ -173,7 +173,7 @@
           "type": "item",
           "code": "expandedfoods:wilddryfruit-{type}"
         },
-        "transitionRatio": 0.25
+        "transitionRatio": 1
       },
     ],
     "*": [
@@ -195,7 +195,7 @@
           "type": "item",
           "code": "expandedfoods:wilddryfruit-{type}"
         },
-        "transitionRatio": 0.25
+        "transitionRatio": 1
       },
     ]
   },
