@@ -19,47 +19,67 @@
     "op": "add",
     "path": "/attributes/onDisplayTransformByType",
     "value": {
-    "*-strawberry": {
-        "translation": { "x": -0.05, "y": -0.255, "z": 0.15 },
-        "rotation": { "x": 90, "y": 0, "z": 90 },
-        "scale": 0.65
+    "*-wolfberry": {
+        "translation": { "x": 0.05, "y": -0.625, "z": 0 },
+        "rotation": { "x": 180, "y": 0, "z": 0 },
+        "scale": 0.45
       },
-    "*-raspberry": {
-        "translation": { "x": 0.05, "y": -0.21, "z": -0.05 },
-        "scale": 0.55
+    "*-husktomato": {
+        "translation": { "x": 0.1, "y": -0.275, "z": 0 },
+        "scale": 0.5
+      },
+    "*-bunchberry": {
+        "translation": { "x": 0, "y": -0.55, "z": 0 },
+        "rotation": { "x": 180, "y": 0, "z": 0 },
+        "scale": 0.5
+      },
+    "*-crowberry": {
+        "translation": { "x": -0.05, "y": -0.3, "z": -0.1 },
+        "rotation": { "x": -23, "y": 0, "z": -11 },
+        "scale": 0.5
+      },
+    "*-strawberry": {
+        "translation": { "x": -0.2, "y": -0.4, "z": 0 },
+        "rotation": { "x": 90, "y": 0, "z": 90 },
+        "scale": 0.45
+      },
+    "@*-(raspberry|blueraspberry)": {
+        "translation": { "x": 0.25, "y": -0.5, "z": -0.05 },
+        "rotation": { "x": 90, "y": 0, "z": -90 },
+        "scale": 0.45
       },
     "*-honeysuckle": {
-        "translation": { "x": 0.05, "y": -0.12, "z": -0.05 },
-        "scale": 0.75
+        "translation": { "x": 0.1, "y": -0.225, "z": -0.05 },
+        "scale": 0.5
       },
     "*-gooseberry": {
-        "translation": { "x": 0.1, "y": -0.235, "z": -0.05 },
-        "rotation": { "x": 0, "y": 0, "z": -45 },
-        "scale": 0.55
+        "translation": { "x": 0.15, "y": -0.2, "z": -0.05 },
+        "rotation": { "x": 0, "y": 90, "z": 0 },
+        "scale": 0.45
       },
     "*-elderberry": {
-        "translation": { "x": -0.05, "y": -0.295, "z": 0.15 },
+        "translation": { "x": -0.125, "y": -0.5, "z": 0.05 },
         "rotation": { "x": 0, "y": 0, "z": 120 },
-        "scale": 0.75
+        "scale": 0.5
       },
       "*-dogrose": {
-        "translation": { "x": 0, "y": -0.165, "z": 0.0 },
-        "scale": 0.67
+        "translation": { "x": 0, "y": -0.29, "z": 0.0 },
+        "scale": 0.45
       },
     "*-cloudberry": {
-        "translation": { "x": 0, "y": -0.1, "z": 0.05 },
+        "translation": { "x": 0.05, "y": -0.2, "z": 0 },
         "rotation": { "x": -90, "y": -90, "z": -90 },
-        "scale": 0.75
+        "scale": 0.55
       },
    "*-brambleberry": {
-        "translation": { "x": 0.175, "y": -0.28, "z": 0.075 },
+        "translation": { "x": 0.025, "y": -0.475, "z": 0.25 },
         "rotation": { "x": 90, "y": 0, "z": 0 },
-        "scale": 0.67
+        "scale": 0.5
       },
     "@*-(huckleberry|snowberry)": {
-        "translation": { "x": -0.05, "y": -0.25, "z": 0.15 },
+        "translation": { "x": -0.2, "y": -0.425, "z": 0 },
         "rotation": { "x": 0, "y": 0, "z": 90 },
-        "scale": 0.75
+        "scale": 0.55
       }
     },
   }
