@@ -7,7 +7,7 @@
 	width: 1,
 	height: 1,
 	shapeless: false,
-	output: { type: "item", code: "expandedfoods:dehydratedfruit-yellowapple", quantity: 2 }
+	output: { type: "item", code: "expandedfoods:dehydratedfruit-yellowapple", quantity: 1 }
  },
  {
 	ingredientPattern: "F",
@@ -17,6 +17,6 @@
 	width: 1,
 	height: 1,
 	shapeless: false,
-	output: { type: "item", code: "expandedfoods:dehydratedfruit-{fruit}", quantity: 2 }
+	output: { type: "item", code: "expandedfoods:dehydratedfruit-{fruit}", quantity: 1 }
  }
 ]
