@@ -8,6 +8,6 @@
 	width: 1,
 	height: 1,
 	shapeless: false,
-	output: { type: "item", code: "expandedfoods:wilddehydratedfruit-{fruit}", quantity: 2 }
+	output: { type: "item", code: "expandedfoods:wilddehydratedfruit-{fruit}", quantity: 1 }
  }
 ]
