@@ -42,10 +42,11 @@ You can no longer crack boiled/pickled eggs - DONE!!!
 Charred syrup-covered fruit bread recipe fixed - DONE!!!
 Japanese translation updated (thanks to macoto_hino) - DONE!!!
 Log spam reduced
-Wildcraft berries fixed in oven
+Wildcraft berries fixed in oven - DONE!!!
 Candied fruit added
 Lard transition timer reduced from 1440 hours to 240 - DONE!!!
 Peanuts now visible in meals - DONE!!!
+Dehydrated fruits cure into the same amount of dried fruits (whoops); dehydrated fruit grid recipe nerfed to compensate - DONE!!!
 
 1.6.3
 Added Breaded Mushrooms
